@@ -13,6 +13,10 @@ use the updated data with your old Turba version anymore.
 Upgrading Turba from 2.x to 3.x
 ===============================
 
+
+The ``config/sources.php`` configuration file has been renamed to
+``config/backends.php``.
+
 The ``_turba_hook_encode_{attribute}`` hook has been moved to the
 'encode_attribute' hook.
 
