@@ -54,7 +54,7 @@ class Turba_Test extends Horde_Test
         'config/conf.php' => null,
         'config/mime_drivers.php' => null,
         'config/prefs.php' => null,
-        'config/sources.php' => null
+        'config/backends.php' => null
     );
 
     /**
